--- a/.isort.cfg
+++ b/.isort.cfg
@@ -5,4 +5,4 @@ force_grid_wrap=0
 combine_as_imports=True
 line_length=88
 known_first_party=metal,synthetic,tests,tutorials
-known_third_party=GPUtil,boto3,matplotlib,networkx,nltk,nose,numpy,pandas,paramiko,pytorch_pretrained_bert,scipy,setuptools,sklearn,tensorboardX,torch,torchtext,torchvision,tqdm
+known_third_party=GPUtil,IPython,apex,auxiliary_tasks,boto3,matplotlib,networkx,nltk,nose,numpy,pandas,paramiko,pytorch_pretrained_bert,scipy,setuptools,sklearn,snorkel,tensorboardX,torch,torchtext,torchvision,tqdm
